tests/ui/typeck/constants/multiple_constant_keywords.sol
uint constant constant x;
//~^ ERROR: mutability already specified
//~| ERROR: constant variable must be initialized
